--- a/Task8/Base.lproj/Main.storyboard
+++ b/Task8/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <scene sceneID="cGh-M5-g4t">
             <objects>
                 <viewController id="7K7-4G-gGK" customClass="RedViewController" customModule="Task8" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="OHs-fV-VOx" customClass="red">
+                    <view key="view" contentMode="scaleToFill" id="OHs-fV-VOx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
